--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
     "builds": [
       {
         "src": "public/index.php",
-        "use": "@vercel/php",
-        "config": {
-          "maxLambdaSize": "50mb"
-        }
+        "use": "@vercel/php"
       }
     ],
     "routes": [
