--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
     "version": 2,
     "builds": [
       {
+        "src": "vite.config.js",
+        "use": "@vercel/node"
+      },
+      {
         "src": "public/index.php",
         "use": "@vercel/php"
       }
